proof for alternate Hs expression

--- a/common/bib/algebra.bib
+++ b/common/bib/algebra.bib
@@ -658,6 +658,14 @@
   urlw         = {http://www.worldcat.org/isbn/0471496944},
   urla         = {http://www.amazon.com/dp/0471496944},
   }
+
+@book{slaught1915,
+  title        = {Elementary Algebra},
+  author       = {Herbert Ellsworth Slaught and Nels Johann Lennes},
+  publisher    = {Allyn and Bacon},
+  year         = {1915},
+  pages        = {373},
+  }
   
 @book{smith2011,
   author       = {Jonathan D. H. Smith},
