--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -1045,7 +1045,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (A).
       &= \frac{\Swyp(\omega)}{\Swpp(\omega)}
       && \text{by \prefp{thm:estHls}}
     \\&= \frac{\Swyp(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
-    \\&= \frac{\Swyx(\omega)+\Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
+     &&= \frac{\Swyx(\omega)+\Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
     \\
     \text{(2):\quad}\estHls(\omega)
       &= \frac{\Swyx(\omega)+\Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
@@ -1085,8 +1085,8 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (B).
       &= \frac{\Swyp(\omega)}{\Swpp(\omega)}
       && \text{by \prefp{thm:estHls}}
     \\&= \frac{\Swyp(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
-    \\&= \frac{\Swyx(\omega)-\Swyu(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
-    \\&= \frac{\Swyx(\omega)-\cancelto{0}{\Swyu(\omega)}}{\Swxx(\omega)-\Swuu(\omega)}
+     &&= \frac{\Swyx(\omega)-\Swyu(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
+     &&= \frac{\Swyx(\omega)-\cancelto{0}{\Swyu(\omega)}}{\Swxx(\omega)-\Swuu(\omega)}
     \\
     \text{(2):\quad}\estHls(\omega)
       &= \frac{\Swyx(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
@@ -1119,89 +1119,114 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (B).
 \label{prop:Hs}                                                                   %
 %---------------------------------------------------------------------------------%
 Let $\estHs(\omega; s)$ be defined as in \prefpp{def:Hs}.
-\propbox{
-  \estHs(\omega; s) =
+\propbox{\begin{array}{rc>{\ds}l}
+  \estHs(\omega; s) 
+    &=&
   \frac{\ds 2s^2\Swyx(\omega)}
        {\ds  s^2\Swxx(\omega)-\Swyy(\omega) +
         \sqrt{\brs{s^2\Swxx(\omega)-\Swyy(\omega)}^2 + 4s^2\abs{\Swxy(\omega)}^2}
        }
-  }
+  \\&=& \frac{2 \Swxy^\ast}
+             {\Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\brs{\Swxx - \frac{1}{s^2}\Swyy}^2 + \frac{4}{s^2} \abs{\Swxy }^2}}
+\end{array}}
 \end{proposition}
 \begin{proof}
-Note: There is no complete proof here at this time.
-
-Let $p\eqd s^2$.
-Let $\ds\fG(s)\eqd
-  \frac{\ds 2s^2\Swyx }
-       {\ds  s^2\Swxx -\Swyy  +
-        \sqrt{\brs{s^2\Swxx -\Swyy }^2 + 4s^2\abs{\Swxy }^2}
-       }$.
+We can transform $\estHs$ from that found in \prefpp{def:Hs} to the forms in this proposition by the
+technique of ``\ope{rationalizing the denominator}"\footnote{\citerpc{slaught1915}{274}{``197. Rationalizing the Denominator."} 
+Note that the operation in the proof of \pref{prop:Hs} is being performed essentially in reverse\ldots or rather ``rationalizing the numerator".}
 \begin{align*}
-  \lim_{p\to\infty}\fG(s) 
-    &\eqd 
-          \frac{\ds 2s^2\Swyx }
-               {\ds  s^2\Swxx -\Swyy  +
-                \sqrt{\brs{s^2\Swxx -\Swyy }^2 + 4s^2\abs{\Swxy }^2}
-               }
-  \\&\eqd \lim_{p\to\infty} 
-          \frac{\ds 2p\Swyx }
-                {\ds  p\Swxx -\Swyy  +
-                 \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}
-                }
-  \\&=    \lim_{p\to\infty} 
+  \estHs 
+    &\eqd \frac{\Swyy - s^2 \Swxx  +
+            \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}
+           }{2\Swxy }
+    &&\text{by definition of $\estHs$ 
+             \xref{def:Hs}}
+  \\&= \mathrlap{\frac{
+            \brs{\Swyy - s^2 \Swxx  + \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}
+            \mcom{\brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}}{``\vale{rationalizing factor}"}
+            }{
+            2\Swxy 
+            \mcom{\brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}}{``\vale{rationalizing factor}"}
+            }}
+  \\&= \frac{
+            \brs{\Swyy - s^2 \Swxx}^2  - \brs{\Swyy  -  s^2 \Swxx }^2 - 4 s^2 \abs{\Swxy }^2
+            }{
+            2\Swxy 
+            \brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}
+            }
+   &&= \frac{
+            - 4 s^2 \abs{\Swxy }^2
+            }{
+            2\Swxy 
+            \brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}
+            }
+  \\&= \boxed{\frac{2 s^2 \Swxy^\ast}
+            {s^2 \Swxx - \Swyy  + \sqrt{\brs{s^2 \Swxx - \Swyy}^2 + 4s^2 \abs{\Swxy }^2}}}
+   &&= \frac{2 \frac{s^2}{s^2} \Swxy^\ast}
+            {\frac{s^2}{s^2} \Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\frac{1}{s^4}\brs{s^2 \Swxx - \Swyy}^2 + \frac{4s^2}{s^4} \abs{\Swxy }^2}}
+  \\&= \frac{2 \Swxy^\ast}
+            {\Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\brs{\frac{s^2}{s^2} \Swxx - \frac{1}{s^2}\Swyy}^2 + \frac{4}{s^2} \abs{\Swxy }^2}}
+   &&= \boxed{\frac{2 \Swxy^\ast}
+            {\Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\brs{\Swxx - \frac{1}{s^2}\Swyy}^2 + \frac{4}{s^2} \abs{\Swxy }^2}}}
+\end{align*}
+
+Integrity check for $s=0$ and $s\to\infty$ cases:
+Let $p\eqd s^2$.
+%Let $\ds\fG(s)\eqd
+%  \frac{\ds 2s^2\Swyx }
+%       {\ds  s^2\Swxx -\Swyy  +
+%        \sqrt{\brs{s^2\Swxx -\Swyy }^2 + 4s^2\abs{\Swxy }^2}
+%       }$.
+\begin{align*}
+  \lim_{p\to\infty}\estHs 
+    &=    \lim_{p\to\infty} 
           \frac{\ds 2\Swyx }
-                {\ds  \Swxx -\sfrac{1}{p}\Swyy  +
-                 \sqrt{\brs{\Swxx -\sfrac{1}{p}\Swyy }^2 + \sfrac{4}{p}\abs{\Swxy }^2}
+                {\ds  \Swxx -\frac{1}{p}\Swyy  +
+                 \sqrt{\brs{\Swxx -\frac{1}{p}\Swyy }^2 + \frac{4}{p}\abs{\Swxy }^2}
                 }
-  \\&=    \frac{\ds 2\Swyx }
+   &&=    \frac{\ds 2\Swyx }
                {\ds  \Swxx  +
                  \sqrt{\brs{\Swxx }^2 }
                }
   \\&=    \frac{\Swyx }
                {\Swxx }
-  \\&\eqd \estHa 
-    && \text{by def. of $\estHa$}
-    && \text{\xref{def:H1}}
-  \\
-  \lim_{p\to0}\fG(s) 
-    &\eqd 
-          \frac{\ds 2s^2\Swyx }
-               {\ds  s^2\Swxx -\Swyy  +
-                \sqrt{\brs{s^2\Swxx -\Swyy }^2 + 4s^2\abs{\Swxy }^2}
-               }
-  \\&\eqd \lim_{p\to0} 
+     \eqd \estHa 
+    && \text{by def. of $\estHa$ 
+             \xref{def:H1}}
+\end{align*}
+\begin{align*}
+  \lim_{p\to0}\estHs
+    &=    \lim_{p\to0} 
           \frac{\ds 2p\Swyx }
                 {\ds  p\Swxx -\Swyy  +
                  \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}
                 }
-  \\&=    \frac{\lim_{p\to0} \ddp}{\lim_{p\to0} \ddp}
-          \frac{\ds 2p\Swyx }
-                {\ds  p\Swxx -\Swyy  +
+  \\&=    \frac{\ds \lim_{p\to0} \ddp 2p\Swyx }
+                {\lim_{p\to0} \ddp\brp{\ds  p\Swxx -\Swyy  +
                  \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}
-                }
+                }}
     &&    \text{by \thme{l'H{/<o}pital's rule}}
-  \\&=    \frac{\lim_{p\to0} \ddp}{\lim_{p\to0} \ddp}
-          \frac{\ds 2\Swyx }
-                {\ds  \Swxx  +
+  \\&=    \frac{\ds 2\Swyx }
+                {\ds \lim_{p\to0} \ddp\brp{ \Swxx  +
                  \frac{2\Swxx\brs{p\Swxx -\Swyy } + 4\abs{\Swxy }^2}
                       {2\sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}}
-                }
-  \\&=    \frac{\ds 2\Swyx }
+                }}
+   &&=    \frac{\ds 2\Swyx }
                 {\ds  \Swxx  +
                  \frac{-2\Swxx\Swyy  + 4\abs{\Swxy }^2}
                       {2\sqrt{\brs{-\Swyy }^2}}
                 }
   \\&=    \frac{\ds 2\Swyx }{
                \frac{\ds2\Swxx \Swyy  + -2\Swxx\Swyy  + 4\abs{\Swxy }^2}
-                    {2\Swyy }
+                    {\ds2\Swyy }
                }
-  \\&=    \frac{\ds 4\Swyy \Swyx }
+   &&=    \frac{\ds 4\Swyy \Swyx }
                {\ds 4\abs{\Swxy }^2}
-  \\&=    \frac{\ds \Swyy }
+     =    \frac{\ds \Swyy }
                {\ds \Swxy }
   \\&\eqd \estHb 
-    && \text{by def. of $\estHb$}
-    && \text{\xref{def:H2}}
+    && \text{by def. of $\estHb$ 
+             \xref{def:H2}}
 \end{align*}
 \end{proof}
 
