phases of transfer function estimators

--- a/common/bib/algebra.bib
+++ b/common/bib/algebra.bib
@@ -665,6 +665,7 @@
   publisher    = {Allyn and Bacon},
   year         = {1915},
   pages        = {373},
+  url          = {https://archive.org/details/elementaryalgebr00slaurich/},
   }
   
 @book{smith2011,
