separate coherence to its own chapter

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -188,6 +188,23 @@
   year         = {2006},
   }
 
+@article{chen2012,
+  title        = {PolInSAR Complex Coherence Estimation Based on Covariance Matrix Similarity Test},
+  author       = {Si-Wei Chen and Xue-Song Wang and Motoyuki Sato},
+  journal      = {IEEE Transactions on Geoscience and Remote Sensing},
+  volume       = {50},
+  number       = {11},
+  month        = {November},
+  year         = {2012},
+  pages        = {4699--4710},
+  printissn    = {0196-2892},
+  eissn        = {1558-0644},
+  inspec       = {13100178},
+  doi          = {10.1109/TGRS.2012.2192937},
+  publisher    = {IEEE},
+  url          = {https://www.researchgate.net/profile/Si_Wei_Chen/publication/281271737},
+  }
+
 @phdthesis{cobb1988,
   author       = {Richard E. Cobb},
   title        = {Confidence Bands, Measurement Noise, and Multiple Input - Multiple Output Measurements Using the Three-Channel Frequency Response Function Estimator},
