--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1828,7 +1828,8 @@
 \newcommand{\Szqr}   {\Sz{qr}}
 \newcommand{\Szpp}   {\Sz{pp}}
 
-\newcommand{\Cxy}{\mathfnct{C}_{\mathsfup{xy}}}  % coherence function
+\newcommand{\Cxy}{\mathfnct{C}_{\mathsfup{xy}}}  % complex coherence function
+\newcommand{\oCxy}{\mathfnct{\gamma^2}_{\mathsfup{xy}}}  % ordinary coherence function
 
 \newcommand{\Tw}   [1]{\tilde{\mathfnct{T}}_{\mathsfup{#1}}}  % transmissibility
 \newcommand{\Twxy}{\Tw{xy}}
