--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -791,7 +791,7 @@ Proof not complete ... work in progress
 \begin{enumerate}
   \item Let $p\eqd s^2$ \label{item:Hs_mono_p}
   \item lemma: derivative of $\estHs$ with respect to $p\eqd s^2$ \ldots
-    \begin{align*}
+    {\begin{align*}
       \ddp\estHs
         &\eqd \ddp\frac{\Swyy - s^2 \Swxx  +
                           \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}
@@ -803,11 +803,16 @@ Proof not complete ... work in progress
                        }{2\Swxy }
         && \text{by definition of $p$}
         && \text{\xref{item:Hs_mono_p}}
-      \\&= \frac{- p \Swxx  +
-                   \frac{-2\Swxx\brs{\Swyy  -  p \Swxx } + 4 \abs{\Swxy }^2}
-                        {2\sqrt{\brs{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
-                }{2\Swxy }
-    \end{align*}
+      \\&= \frac{\ds- \Swxx  + \frac{-2\Swxx\brs{\Swyy  -  p \Swxx } + 4 \abs{\Swxy }^2}
+                                    {2\sqrt{\brs{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+                }{\ds2\Swxy }
+      \\&= \frac{4 \abs{\Swxy }^2   -2\Swxx\brp{\Swyy  -  p \Swxx} - 2\Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+                {4\Swxy\sqrt{\brs{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+      \\&\le \frac{4 \abs{\Swxy }^2   -2\Swxx\brs{\brp{\Swyy  -  p \Swxx} + \sqrt{\brp{\Swyy  -  p \Swxx }^2 }}}
+                  {4\Swxy\sqrt{\brs{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+      \\&=   \frac{\abs{\Swxy }^2   -\Swxx\brs{\brp{\Swyy  -  p \Swxx} }}
+                  {\Swxy\sqrt{\brs{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+    \end{align*}}
 \end{enumerate}
 \end{proof}
 
