illustrations for Hs versus p=s^2

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -658,6 +658,17 @@ Let $\opS$ be a system with input $\rvx(n)$, output $\rvy(n)$, and a driver $\rv
 %=======================================
 \section{Estimator relationships}
 %=======================================
+\begin{figure}[h]
+  \begin{tabular}{|c|c|}
+    \hline
+     \includegraphics{graphics/transferHs_p.pdf}
+    &\includegraphics{graphics/transferHs_ddp.pdf}
+    \\
+    $\estHs$&$\ddp\estHs$ where $p\eqd s^2$
+    \\\hline
+  \end{tabular}
+  \caption{$\estHs$ with $\Swxx=\Swyy=1$ and $\Swxy=\frac{1}{2}$\label{fig:Hs}}
+\end{figure}
 % _______________________________
 %|P|                             |
 %|R| Hs(w; s=0)     = H2(w)      |
@@ -781,7 +792,7 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
 \thmbox{\begin{array}{M}
   $\ds\brb{s_1 < s_2} 
   \qquad\implies\qquad
-  \estHs(\omega;s_1) \le \estHs(\omega;s_2)$
+  \estHs(\omega;s_2) \le \estHs(\omega;s_1)$
   \\
   ($\estHs$ is \propb{monotonically decreasing} in $s$)
 \end{array}}
@@ -794,24 +805,24 @@ Proof not complete ... work in progress
     {\begin{align*}
       \ddp\estHs
         &\eqd \ddp\frac{\Swyy - s^2 \Swxx  +
-                          \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}
+                          \sqrt{\brp{\Swyy - s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}
                        }{2\Swxy }
         && \text{by definition of $\estHs$}
         && \text{\xref{def:Hs}}
       \\&\eqd \ddp\frac{\Swyy - p \Swxx  +
-                          \sqrt{\brs{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}
+                          \sqrt{\brp{\Swyy - p \Swxx }^2 + 4 p \abs{\Swxy }^2}
                        }{2\Swxy }
         && \text{by definition of $p$}
         && \text{\xref{item:Hs_mono_p}}
-      \\&= \frac{\ds- \Swxx  + \frac{-2\Swxx\brs{\Swyy  -  p \Swxx } + 4 \abs{\Swxy }^2}
-                                    {2\sqrt{\brs{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+      \\&= \frac{\ds- \Swxx  + \frac{-2\Swxx\brp{\Swyy  -  p \Swxx } + 4 \abs{\Swxy }^2}
+                                    {2\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
                 }{\ds2\Swxy }
       \\&= \frac{4 \abs{\Swxy }^2   -2\Swxx\brp{\Swyy  -  p \Swxx} - 2\Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
-                {4\Swxy\sqrt{\brs{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+                {4\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
       \\&\le \frac{4 \abs{\Swxy }^2   -2\Swxx\brs{\brp{\Swyy  -  p \Swxx} + \sqrt{\brp{\Swyy  -  p \Swxx }^2 }}}
-                  {4\Swxy\sqrt{\brs{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
-      \\&=   \frac{\abs{\Swxy }^2   -\Swxx\brs{\brp{\Swyy  -  p \Swxx} }}
-                  {\Swxy\sqrt{\brs{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+                  {4\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+      \\&=   \frac{\abs{\Swxy }^2   -\Swxx\brp{\Swyy  -  p \Swxx} }
+                  {\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
     \end{align*}}
 \end{enumerate}
 \end{proof}
@@ -1216,7 +1227,7 @@ Note that the operation in the proof of \pref{prop:Hs} is being performed essent
              \xref{def:Hs}}
   \\&= \mathrlap{\frac{
             \brs{\Swyy - s^2 \Swxx  + \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}
-            \mcom{\brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}}{``\vale{rationalizing factor}"}
+            \ocom{\brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}}{``\vale{rationalizing factor}"}
             }{
             2\Swxy 
             \mcom{\brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}}{``\vale{rationalizing factor}"}
