lemma for Hs monoticity proof

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -801,6 +801,30 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
 Proof not complete ... work in progress
 \begin{enumerate}
   \item Let $p\eqd s^2$ \label{item:Hs_mono_p}
+  \item lemma: \label{ilem:Hs_ineq}
+      $4 \abs{\Swxy }^2   -2\Swxx\brp{\Swyy  -  p \Swxx} - 2\Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2} \le 0$.
+      proof:
+    \begin{align*}
+      &4 \abs{\Swxy }^2   -2\Swxx\brp{\Swyy  -  p \Swxx} - 2\Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2} \le 0
+    \\&\iff
+      2 \abs{\Swxy }^2   -\Swxx\brp{\Swyy  -  p \Swxx} \le \Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}
+    \\&\iff
+      \brs{2 \abs{\Swxy }^2   -\Swxx\brp{\Swyy  -  p \Swxx}}^2 \le \brs{\Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}^2
+    \\&\iff
+      4 \abs{\Swxy }^4   -4\Swxx\abs{\Swxy}\brp{\Swyy  -  p \Swxx} +\Swxx^2\brp{\Swyy  -  p \Swxx}^2 \le \Swxx^2\brs{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}
+    \\&\iff
+      4 \abs{\Swxy }^4   -4\Swxx\abs{\Swxy}\brp{\Swyy  -  p \Swxx} +\cancelto{0}{\Swxx^2\brp{\Swyy  -  p \Swxx}^2} \le \Swxx^2\brs{\cancelto{0}{\brp{\Swyy  -  p \Swxx }^2} + 4 p \abs{\Swxy }^2}
+    \\&\iff
+      4 \abs{\Swxy }^4   -4\Swxx\abs{\Swxy}\brp{\Swyy  -  p \Swxx}  \le 4p\Swxx^2\abs{\Swxy }^2
+    \\&\iff
+      4 \abs{\Swxy }^4   -4\Swxx\abs{\Swxy}\brp{\Swyy  -  \cancelto{0}{p \Swxx}}  \le \cancelto{0}{4p\Swxx^2\abs{\Swxy }^2}
+    \\&\iff
+      \abs{\Swxy }^4   \le \abs{\Swxy}^2\Swxx\Swyy
+    \\&\iff
+      \abs{\Swxy }^2   \le \Swxx\Swyy
+    \\&\text{true by \thme{Cauchy Schwartz inequality} \xref{thm:cs}}
+    \end{align*}
+
   \item lemma: derivative of $\estHs$ with respect to $p\eqd s^2$ \ldots
     {\begin{align*}
       \ddp\estHs
@@ -819,10 +843,14 @@ Proof not complete ... work in progress
                 }{\ds2\Swxy }
       \\&= \frac{4 \abs{\Swxy }^2   -2\Swxx\brp{\Swyy  -  p \Swxx} - 2\Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
                 {4\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
-      \\&\le \frac{4 \abs{\Swxy }^2   -2\Swxx\brs{\brp{\Swyy  -  p \Swxx} + \sqrt{\brp{\Swyy  -  p \Swxx }^2 }}}
-                  {4\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
-      \\&=   \frac{\abs{\Swxy }^2   -\Swxx\brp{\Swyy  -  p \Swxx} }
-                  {\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+      \\&\le 0
+        &&\text{by \pref{ilem:Hs_ineq}}
+%\\
+%\\
+%      \\&\le \frac{4 \abs{\Swxy }^2   -2\Swxx\brs{\brp{\Swyy  -  p \Swxx} + \sqrt{\brp{\Swyy  -  p \Swxx }^2 }}}
+%                  {4\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+%      \\&=   \frac{\abs{\Swxy }^2   -\Swxx\brp{\Swyy  -  p \Swxx} }
+%                  {\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
     \end{align*}}
 \end{enumerate}
 \end{proof}
