more direct-style proof of lemma for Hs monoticity proof

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -780,6 +780,7 @@ Let $\estHs(\omega)$ be defined as in \prefpp{def:Hs}.
   %  && \text{\xref{def:H1}}
 \end{align*}
 \end{proof}
+\newpage
 % ______________________________________
 %|T|                                    |
 %|H| Hs is monotonically decreasing in s|
@@ -798,32 +799,69 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
 \end{array}}
 \end{theorem}
 \begin{proof}
-Proof not complete ... work in progress
 \begin{enumerate}
   \item Let $p\eqd s^2$ \label{item:Hs_mono_p}
-  \item lemma: \label{ilem:Hs_ineq}
-      $4 \abs{\Swxy }^2   -2\Swxx\brp{\Swyy  -  p \Swxx} - 2\Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2} \le 0$.
-      proof:
+  \item lemma: \label{ilem:Hs_ineq_sq}
     \begin{align*}
-      &4 \abs{\Swxy }^2   -2\Swxx\brp{\Swyy  -  p \Swxx} - 2\Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2} \le 0
-    \\&\iff
-      2 \abs{\Swxy }^2   -\Swxx\brp{\Swyy  -  p \Swxx} \le \Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}
-    \\&\iff
-      \brs{2 \abs{\Swxy }^2   -\Swxx\brp{\Swyy  -  p \Swxx}}^2 \le \brs{\Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}^2
-    \\&\iff
-      4 \abs{\Swxy }^4   -4\Swxx\abs{\Swxy}\brp{\Swyy  -  p \Swxx} +\Swxx^2\brp{\Swyy  -  p \Swxx}^2 \le \Swxx^2\brs{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}
-    \\&\iff
-      4 \abs{\Swxy }^4   -4\Swxx\abs{\Swxy}\brp{\Swyy  -  p \Swxx} +\cancelto{0}{\Swxx^2\brp{\Swyy  -  p \Swxx}^2} \le \Swxx^2\brs{\cancelto{0}{\brp{\Swyy  -  p \Swxx }^2} + 4 p \abs{\Swxy }^2}
-    \\&\iff
-      4 \abs{\Swxy }^4   -4\Swxx\abs{\Swxy}\brp{\Swyy  -  p \Swxx}  \le 4p\Swxx^2\abs{\Swxy }^2
-    \\&\iff
-      4 \abs{\Swxy }^4   -4\Swxx\abs{\Swxy}\brp{\Swyy  -  \cancelto{0}{p \Swxx}}  \le \cancelto{0}{4p\Swxx^2\abs{\Swxy }^2}
-    \\&\iff
-      \abs{\Swxy }^4   \le \abs{\Swxy}^2\Swxx\Swyy
-    \\&\iff
-      \abs{\Swxy }^2   \le \Swxx\Swyy
-    \\&\text{true by \thme{Cauchy Schwartz inequality} \xref{thm:cs}}
+      \boxed{\brs{2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy}}^2}
+        &=   4 \abs{\Swxy}^4   
+           + 4 \Swxx\abs{\Swxy}^2\brp{p \Swxx - \Swyy} 
+           +   \Swxx^2\brp{p \Swxx - \Swyy}^2 
+      \\&\boxed{\le} 4 \abs{\Swxy}^2\Swxx\Swyy 
+           + 4p\Swxx \abs{\Swxy}^2\Swxx
+           - 4 \Swxx \abs{\Swxy}^2\Swyy
+           +   \Swxx^2\brp{p \Swxx - \Swyy}^2 
+        && \text{by \thme{Cauchy Schwartz inequality}}
+        && \text{\prefp{thm:cs}}
+      \\&=   \cancelto{0}{4 \Swxx \Swyy \abs{\Swxy}^2}
+           + 4p\Swxx       \abs{\Swxy}^2\Swxx
+           - \cancelto{0}{4 \Swxx \Swyy \abs{\Swxy}^2}
+           +   \Swxx^2\brp{p \Swxx - \Swyy}^2 
+      \\&= \Swxx^2 \brs{\brp{p \Swxx - \Swyy}^2  + 4p\abs{\Swxy}^2 }
+      \\&= \boxed{\brs{\Swxx\sqrt{\brp{p \Swxx - \Swyy}^2  + 4p\abs{\Swxy}^2 }}^2}
     \end{align*}
+
+  \item lemma: \label{ilem:Hs_ineq}
+      $2 \abs{\Swxy }^2   +\Swxx\brp{p \Swxx - \Swyy} \le \Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}$.
+      Proof:
+    \begin{align*}
+      &
+      &2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy} 
+      &&\le \Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}
+    \\&\iff
+      &\brs{2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy}}^2 
+      &&\le \brs{\Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}}^2
+      && \text{because $\ff(x)\eqd x^2$ is \prope{strictly monotonic increasing}}
+    \\&\text{true by \pref{ilem:Hs_ineq_sq}}
+    \end{align*}
+
+    %\begin{align*}
+    %  &
+    %  &2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy} 
+    %  &&\le \Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}
+    %\\&\iff
+    %  &\brs{2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy}}^2 
+    %  &&\le \brs{\Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}}^2
+    %\\&\iff
+    %  4 \abs{\Swxy}^4   +4\Swxx\abs{\Swxy}\brp{p \Swxx - \Swyy} +\Swxx^2\brp{p \Swxx - \Swyy}^2 
+    %  &&\le \Swxx^2\brp{p \Swxx - \Swyy}^2 + 4p\Swxx^2\abs{\Swxy }^2
+    %\\&\iff
+    %  4 \abs{\Swxy}^4   +4\Swxx\abs{\Swxy}\brp{p\Swxx-\Swyy} +\cancelto{0}{\Swxx^2\brp{p\Swxx-\Swyy}^2} 
+    %  &&\le \cancelto{0}{\Swxx^2\brp{p\Swxx-\Swyy}^2} + 4p\Swxx^2\abs{\Swxy}^2
+    %\\&\iff
+    %  4 \abs{\Swxy}^4   +4\Swxx\abs{\Swxy}\brp{p \Swxx - \Swyy}  
+    %  &&\le 4p\Swxx^2\abs{\Swxy }^2
+    %\\&\iff
+    %  4 \abs{\Swxy}^4   +4\Swxx\abs{\Swxy}\brp{\cancelto{0}{p \Swxx}-\Swyy}  
+    %  &&\le \cancelto{0}{4p\Swxx^2\abs{\Swxy }^2}
+    %\\&\iff
+    %  \abs{\Swxy}^4   
+    %  &&\le \abs{\Swxy}^2\Swxx\Swyy
+    %\\&\iff
+    %  \abs{\Swxy}^2   
+    %  &&\le \Swxx\Swyy
+    %\\&\text{true by \thme{Cauchy Schwartz inequality} \xref{thm:cs}}
+    %\end{align*}
 
   \item lemma: derivative of $\estHs$ with respect to $p\eqd s^2$ \ldots
     {\begin{align*}
@@ -833,16 +871,17 @@ Proof not complete ... work in progress
                        }{2\Swxy }
         && \text{by definition of $\estHs$}
         && \text{\xref{def:Hs}}
-      \\&\eqd \ddp\frac{\Swyy - p \Swxx  +
-                          \sqrt{\brp{\Swyy - p \Swxx }^2 + 4 p \abs{\Swxy }^2}
-                       }{2\Swxy }
+      \\&\eqd \ddp\frac{\Swyy-p\Swxx + \sqrt{\brp{\Swyy-p\Swxx }^2 + 4 p \abs{\Swxy}^2}}
+                       {2\Swxy}
         && \text{by definition of $p$}
         && \text{\xref{item:Hs_mono_p}}
-      \\&= \frac{\ds- \Swxx  + \frac{-2\Swxx\brp{\Swyy  -  p \Swxx } + 4 \abs{\Swxy }^2}
-                                    {2\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
-                }{\ds2\Swxy }
-      \\&= \frac{4 \abs{\Swxy }^2   -2\Swxx\brp{\Swyy  -  p \Swxx} - 2\Swxx\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
-                {4\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+      \\&= \frac{\ds- \Swxx  + \frac{-2\Swxx\brp{\Swyy-p\Swxx}   + 4 \abs{\Swxy}^2}
+                                    {2\sqrt{\brp{\Swyy-p\Swxx}^2 + 4p\abs{\Swxy}^2}}
+                }{\ds2\Swxy}
+      \\&= \frac{4 \abs{\Swxy }^2 -2\Swxx\brp{\Swyy-p\Swxx} - 2\Swxx\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
+                {4\Swxy\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
+      \\&= \frac{ \Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 -  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
+                {2\Swxy\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
       \\&\le 0
         &&\text{by \pref{ilem:Hs_ineq}}
 %\\
